--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">VietMapAndroidNavigationExample</string>
+    <string name="app_name">VietMap Navigation Demo</string>
 
     <string name="title_mock_navigation">Giả bộ Điều hướng</string>
     <string name="description_mock_navigation">Giả bộ phiên điều hướng dùng máy định vị giả.</string>
@@ -58,7 +58,7 @@
     <string name="current_night_mode" translatable="false">current_night_mode</string>
 
     <string name="new_location">Vĩ độ: %1$s Kinh độ: %2$s</string>
-    <string name="map_view_style_url" translatable="false">https://run.mocky.io/v3/961aaa3a-f380-46be-9159-09cc985d9326</string>
+    <string name="map_view_style_url" translatable="false">YOUR_STYLE_MAP_URL_HERE</string>
 
     <string name="user_location_permission_explanation">Ứng dụng này cần sử dụng quyền vị trí để hoạt động chính xác.</string>
     <string name="user_location_permission_not_granted">Bạn chưa cung cấp quyền vị trí.</string>
